@@ -20,7 +20,6 @@
 package org.checkstyle.suppressionxpathfilter.javadoc;
 
 import java.io.File;
-import java.util.Collections;
 import java.util.List;
 
 import org.checkstyle.suppressionxpathfilter.AbstractXpathTestSupport;
@@ -56,7 +55,7 @@ public class XpathRegressionInvalidJavadocPositionTest extends AbstractXpathTest
                 InvalidJavadocPositionCheck.MSG_KEY),
         };
 
-        final List<String> expectedXpathQueries = Collections.singletonList(
+        final List<String> expectedXpathQueries = List.of(
             "/COMPILATION_UNIT/CLASS_DEF"
                     + "[./IDENT[@text='InputXpathInvalidJavadocPositionOne']]"
                     + "/MODIFIERS/BLOCK_COMMENT_BEGIN[./COMMENT_CONTENT"
@@ -80,7 +79,7 @@ public class XpathRegressionInvalidJavadocPositionTest extends AbstractXpathTest
                 InvalidJavadocPositionCheck.MSG_KEY),
         };
 
-        final List<String> expectedXpathQueries = Collections.singletonList(
+        final List<String> expectedXpathQueries = List.of(
             "/COMPILATION_UNIT/CLASS_DEF[./IDENT"
                     + "[@text='InputXpathInvalidJavadocPositionTwo']]"
                     + "/OBJBLOCK/BLOCK_COMMENT_BEGIN[./COMMENT_CONTENT"
@@ -104,7 +103,7 @@ public class XpathRegressionInvalidJavadocPositionTest extends AbstractXpathTest
                 InvalidJavadocPositionCheck.MSG_KEY),
         };
 
-        final List<String> expectedXpathQueries = Collections.singletonList(
+        final List<String> expectedXpathQueries = List.of(
             "/COMPILATION_UNIT/CLASS_DEF"
                     + "[./IDENT[@text='InputXpathInvalidJavadocPositionThree']]/"
                     + "OBJBLOCK/BLOCK_COMMENT_BEGIN[./COMMENT_CONTENT"
@@ -128,7 +127,7 @@ public class XpathRegressionInvalidJavadocPositionTest extends AbstractXpathTest
                 InvalidJavadocPositionCheck.MSG_KEY),
         };
 
-        final List<String> expectedXpathQueries = Collections.singletonList(
+        final List<String> expectedXpathQueries = List.of(
             "/COMPILATION_UNIT/CLASS_DEF"
                 + "[./IDENT[@text='InputXpathInvalidJavadocPositionFour']]"
                 + "/OBJBLOCK/BLOCK_COMMENT_BEGIN[./COMMENT_CONTENT"
@@ -152,7 +151,7 @@ public class XpathRegressionInvalidJavadocPositionTest extends AbstractXpathTest
                 InvalidJavadocPositionCheck.MSG_KEY),
         };
 
-        final List<String> expectedXpathQueries = Collections.singletonList(
+        final List<String> expectedXpathQueries = List.of(
             "/COMPILATION_UNIT/CLASS_DEF"
                 + "[./IDENT[@text='InputXpathInvalidJavadocPositionFive']]"
                 + "/OBJBLOCK/METHOD_DEF[./IDENT[@text='foo']]"
@@ -177,7 +176,7 @@ public class XpathRegressionInvalidJavadocPositionTest extends AbstractXpathTest
                 InvalidJavadocPositionCheck.MSG_KEY),
         };
 
-        final List<String> expectedXpathQueries = Collections.singletonList(
+        final List<String> expectedXpathQueries = List.of(
             "/COMPILATION_UNIT/CLASS_DEF"
                 + "[./IDENT[@text='InputXpathInvalidJavadocPositionSix']]"
                 + "/OBJBLOCK/BLOCK_COMMENT_BEGIN[./COMMENT_CONTENT"
